# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//foundation/filemanagement/file_api/file_api.gni")

group("file_api_fuzztest") {
  testonly = true
  if (file_api_feature_hyperaio) {
    deps = [
      "${file_api_path}/interfaces/test/fuzztest/hyperaio_fuzzer:HyperaioFuzzTest",
    ]
  }
}