# Copyright (c) 2022-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//foundation/filemanagement/file_api/file_api.gni")

group("file_api_unittest") {
  testonly = true
  deps = [
    "class_file:class_file_test",
    "filemgmt_libn_test:filemgmt_libn_test",
    "js:ani_file_environment_test",
    "js:ani_file_fs_mock_test",
    "js:ani_file_fs_test",
    "js:ani_file_hash_test",
    "js:ani_file_securitylabel_test",
    "js:ani_file_statvfs_test",
    "napi_js:napi_file_fs_mock_test",
    "remote_uri:remote_uri_test",
    "task_signal:task_signal_test",
  ]
  if (file_api_feature_hyperaio) {
    deps += [ "hyperaio:hyperaio_test" ]
  }
}
