# Copyright (C) 2024-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//build/ohos/ndk/ndk.gni")
import("//foundation/filemanagement/file_api/file_api.gni")

ohos_shared_library("oharchive") {
  branch_protector_ret = "pac_ret"

  sanitize = {
    integer_overflow = true
    ubsan = true
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  cflags = [
    "-fvisibility=hidden",
    "-fdata-sections",
    "-ffunction-sections",
    "-Oz",
  ]
  cflags_cc = [
    "-fvisibility-inlines-hidden",
    "-Oz",
  ]
  include_dirs = [
    "./",
    "frameworks",
    "frameworks/stream",
    "frameworks/format/zip",
    "interface/inner_api/archive/src",
    "interface/inner_api/archive/include",
  ]

  sources = [
    "frameworks/format/zip/zip_writer.c",
    "frameworks/format/zip/zip_reader.c",
    "frameworks/format/zip/zip_reader_impl.c",
    "frameworks/format/zip/zip_writer_impl.c",
    "frameworks/format/zip/zip_handler_common.c",
    "frameworks/stream/stream.c",
    "frameworks/stream/file/stream_file_posix.c",
    "frameworks/stream/memory/stream_mem.c",
    "frameworks/stream/raw/stream_raw.c",
    "frameworks/stream/compress/stream_deflate.c",
    "frameworks/resource/container/dir_item_queue.c",
    "interface/inner_api/archive/src/oh_archive_streamwrite.c",
    "interface/inner_api/archive/src/oh_archive_writer.c",
    "interface/inner_api/archive/src/oh_archive_plugin.c",
    "interface/inner_api/archive/src/oh_archive_reader.c",
    "interface/inner_api/archive/src/archive_utils.c",
  ]
  external_deps = [
     "bounds_checking_function:libsec_shared",
     "zlib:libz",
  ]

  output_name = "oharchive"
  output_extension = "so"
  relative_install_dir = "ndk"
  part_name = "file_api"
  subsystem_name = "filemanagement"
}